<resources>
    <string name="app_name">CarPool</string>
    <string name="car_pool">CarPool</string>
    <string name="copyright_2020_all_rights_reserved">© Copyright 2020. All Rights Reserved</string>
    <string name="logged_in">LoggedIn</string>
    <string name="welcome">WELCOME</string>
    <string name="please_login_or_create_a_new_account">• Please login or create a new account.</string>
    <string name="Create_register_text">• Click on \"Register\" to create a new account.</string>
    <string name="welcome_to_njit_highlander_please_fill_in_the_fields_below">• Welcome to NJIT highlander, please fill in the fields below</string>
    <string name="email_id">EmailId</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register now</string>
    <string name="please_enter_email_id">Please enter emailId</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_email_id">Please enter valid emailId</string>
    <string name="njit_car_pool">NJIT CarPool</string>
    <string name="search_ride">Search Ride</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="are_you_sure_do_you_want_to_logout">Are you sure do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="to_njit">To NJIT</string>
    <string name="from_njit">From NJIT</string>
    <string name="coming_from">comingFrom</string>
    <string name="source">Source</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="car_number">Car Number</string>
    <string name="google_maps_key">api_key</string>
    <string name="please_enter_car_number">Please enter car number</string>
    <string name="please_select_from">Please select from</string>
    <string name="please_select_to">Please select to</string>
    <string name="ride_details_added_successfully">Ride details added successfully</string>
    <string name="search">Search</string>
    <string name="todo1" />
    <string name="back" />
    <string name="update_user" />
    <string name="phone_number" />
    <string name="ride_details">Ride details</string>
    <string name="update_profile">Update profile</string>
    <string name="mobile_number">Mobile number</string>
</resources>