<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/layout_choose_source_destination_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/njit" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_of_value_ten"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_of_value_sixteen" />

        <EditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/itc_font"
            android:hint="@string/from"
            android:textColor="@color/black"
            android:textColorHint="@color/black_30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_of_value_ten"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_of_value_sixteen" />

        <EditText
            android:id="@+id/etTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/itc_font"
            android:hint="@string/to"
            android:textColor="@color/black"
            android:textColorHint="@color/black_30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_of_value_ten"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_of_value_sixteen" />

        <EditText
            android:id="@+id/etCarNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/itc_font"
            android:hint="@string/car_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black_30" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_of_value_twenty"
        android:background="@drawable/red_bg"
        android:fontFamily="@font/itc_font"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>