<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="90"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_twenty"
            android:fontFamily="@font/itc_font"
            android:gravity="center"
            android:text="@string/car_pool"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_size_of_value_thirty"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/carpool_logo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_of_value_twenty"
        android:gravity="center"
        android:padding="@dimen/size_of_value_ten"
        android:text="@string/copyright_2020_all_rights_reserved"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_of_value_sixteen" />

</LinearLayout>