<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/layout_home_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="90"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/njit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/itc_font"
            android:gravity="center"
            android:text="@string/njit_car_pool"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llSearch"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_twenty"
            android:background="@drawable/red_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/tvSearchRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_of_value_eight"
                android:layout_marginLeft="@dimen/size_of_value_eight"
                android:fontFamily="@font/itc_font"
                android:text="@string/search_ride"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_of_value_sixteen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOfferRide"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_twenty"
            android:background="@drawable/red_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_offer_ride" />

            <TextView
                android:id="@+id/tvOfferRide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_of_value_eight"
                android:layout_marginLeft="@dimen/size_of_value_eight"
                android:fontFamily="@font/itc_font"
                android:text="@string/offer_ride"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_of_value_sixteen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUpdateDetails"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_twenty"
            android:background="@drawable/red_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_update_details" />

            <TextView
                android:id="@+id/tvUpdateDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_of_value_eight"
                android:layout_marginLeft="@dimen/size_of_value_eight"
                android:fontFamily="@font/itc_font"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_of_value_sixteen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_of_value_twenty"
            android:background="@drawable/red_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logout" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/size_of_value_eight"
                android:layout_marginLeft="@dimen/size_of_value_eight"
                android:fontFamily="@font/itc_font"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_of_value_sixteen" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_of_value_twenty"
        android:gravity="center"
        android:padding="@dimen/size_of_value_ten"
        android:text="@string/copyright_2020_all_rights_reserved"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_of_value_sixteen" />

</LinearLayout>