<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/layout_update_profile_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_of_value_ten"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_of_value_sixteen" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:textColorHint="@color/black_30" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_of_value_eight"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_of_value_sixteen" />

            <EditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/email_id"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black_30" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_of_value_eight"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_of_value_sixteen" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black_30" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_of_value_eight"
                android:text="@string/car_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_of_value_sixteen" />

            <EditText
                android:id="@+id/etCarNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/mobile_number"
                android:imeOptions="actionDone"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black_30" />


            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_of_value_twenty"
                android:background="@drawable/red_bg"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>