<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CA0303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/btn_Update"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:background="#CD2D2D"
        android:text="@string/update"
        android:textSize="17sp"
        app:backgroundTint="#F83131"
        app:fontFamily="@font/itc_font"
        app:icon="@drawable/update"
        app:iconPadding="5dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <Button
        android:id="@+id/btn_Logout"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:background="#CD2D2D"
        android:text="@string/logout"
        android:textSize="17sp"
        app:backgroundTint="#F83131"
        app:fontFamily="@font/itc_font"
        app:icon="@drawable/logout"
        app:iconPadding="5dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <Button
        android:id="@+id/btn_offerRide"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:background="#CD2D2D"
        android:text="@string/offer_ride"
        android:textSize="17sp"
        app:backgroundTint="#F83131"
        app:fontFamily="@font/itc_font"
        app:icon="@drawable/carpool"
        app:iconPadding="5dp"
        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="209dp"
        android:layout_height="232dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999"
        app:srcCompat="@drawable/njit" />

    <Button
        android:id="@+id/btn_searchRide"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:background="#CD2D2D"
        android:text="@string/search_ride"
        android:textSize="17sp"
        app:backgroundTint="#F83131"
        app:fontFamily="@font/itc_font"
        app:icon="@drawable/search"
        app:iconPadding="5dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/njit_carpool"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/itc_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_2020_all_rights_reserved"
        app:fontFamily="@font/itc_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

</androidx.constraintlayout.widget.ConstraintLayout>